<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_crear_cliente"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uescc.com.clientesipam.CrearClienteActivity">

    <TextView
        android:text="@string/lbl_dui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/duiTextView"
         />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/duiText"
        />
    <TextView
        android:text="@string/lbl_codigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/codigoTextView"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/codigoText"
        android:focusable="false"

        />

    <TextView
        android:text="@string/lbl_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nombreTextView"
        />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/nombreText"
        />


    <TextView
        android:text="@string/lbl_apellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/apellidoTextView"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/apellidoText"
         />

    <TextView
        android:text="@string/lbl_modopago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        />

    <Spinner
        android:id="@+id/opcionSpn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:entries="@array/tipo_cliente" />

    <TextView
        android:text="@string/lbl_tipocliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tipoRgbtn"
        >

        <RadioButton
            android:text="@string/tipo_minorista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbtnMinorista"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            />

        <RadioButton
            android:text="@string/tipo_mayorista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbtnMayorista"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            />
    </RadioGroup>

    <Button
        android:text="@string/agregar"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnCrear"
        android:onClick="crearCliente"/>

</LinearLayout>
